Majlis link update

--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html>
-<h1>Ye hai website</h1>
+<meta http-equiv="refresh" content="5; URL=https://youtube.com/channel/UCTCjgF_g_vQpaCgXbZpJClQ" />
 </html>
