--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 <html>
-<meta http-equiv="refresh" content="5; URL=https://youtube.com/channel/UCTCjgF_g_vQpaCgXbZpJClQ" />
+<!--<meta http-equiv="refresh" content="5; URL=https://youtube.com/channel/UCTCjgF_g_vQpaCgXbZpJClQ" />
+-->
+<a href="https://youtube.com/channel/UCTCjgF_g_vQpaCgXbZpJClQ">link text</a>
 </html>
