--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <!--<meta http-equiv="refresh" content="0; URL=https://youtube.com/channel/UCTCjgF_g_vQpaCgXbZpJClQ" />-->
-<meta http-equiv="refresh" content="0; URL=https://youtu.be/62GFlYRNRF4" />
+<meta http-equiv="refresh" content="0; URL=https://www.facebook.com/102251218908905/videos/278829904090611/" />
 
 <!--<a href="https://youtube.com/channel/UCTCjgF_g_vQpaCgXbZpJClQ">link text</a>-->
 </html>
